Added basic structure to index page and linked to css file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>True or False</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="flex-center flex-column">
+            <h1>True or False</h1>
+            <button class="btn">Play</button>
+            <button class="btn">High Scores</button>
+        </div>
+    </div>
 </body>
 </html>
