Added particle effect along with cdn link js file and css class

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>True or False</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>True or False</title>
+	<link rel="stylesheet" href="assets/css/style.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="assets/js/particles.js"></script>
 </head>
+
 <body>
-    <div class="container">
-        <div class="flex-center flex-column">
-            <h1>True or False</h1>
-            <button class="btn">Play</button>
-            <button class="btn">High Scores</button>
-        </div>
-    </div>
+	<div class="container">
+		<div class="flex-center flex-column">
+			<h1>True or False</h1>
+			<button class="btn">Play</button>
+			<button class="btn">High Scores</button>
+		</div>
+	</div>
+
+	<canvas class="background"></canvas>
 </body>
+
 </html>
