changed button elements to anchors and styled with btn class and added heading style class to h1

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column">
-			<h1>True or False</h1>
-			<button class="btn">Play</button>
-			<button class="btn">High Scores</button>
+			<h1 class="heading-style">True or False</h1>
+			<a class="btn">Play</a>
+			<a class="btn">High Scores</a>
 		</div>
 	</div>
 
