Added box style class to house title and buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="container">
-		<div class="flex-center flex-column">
+		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">True or False</h1>
 			<a class="btn">Play</a>
 			<a class="btn">High Scores</a>
