--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">True or False</h1>
-			<a class="btn">Play</a>
+			<a class="btn" href="/main.html">Play</a>
 			<a class="btn">High Scores</a>
 		</div>
 	</div>
