Added and applied question style class

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
-			<p>What's the answer?</p>
+			<p class="question-style">What's the answer?</p>
 			<a class="btn">True</a>
 			<a class="btn">False</a>
 		</div>
