Added basic structure to game over screen

--- a/gameOver.html
+++ b/gameOver.html
@@ -14,7 +14,11 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
-			
+			<h1>Score: 0</h1>
+            <a href="">Username</a>
+            <a href="">Save</a>
+            <a href="">High Scores</a>
+            <a href="">Play Again</a>
 		</div>
 	</div>
 
