--- a/gameOver.html
+++ b/gameOver.html
@@ -14,11 +14,11 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
-			<h1>Score: 0</h1>
-            <a href="">Username</a>
-            <a href="">Save</a>
-            <a href="">High Scores</a>
-            <a href="">Play Again</a>
+			<h1 class="heading-style">Score: 0</h1>
+            <a class="btn" href="">Username</a>
+            <a class="btn" href="">Save</a>
+            <a class="btn" href="">High Scores</a>
+            <a class="btn" href="">Play Again</a>
 		</div>
 	</div>
 
