Added main.js page and DOM references to elements in main html

--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
-			<p class="question-style">What's the answer?</p>
-			<a class="btn">True</a>
-			<a class="btn">False</a>
+			<p class="question-style" id="statement">What's the answer?</p>
+			<a class="btn" id="trueButton">True</a>
+			<a class="btn" id="falseButton">False</a>
 		</div>
 	</div>
 
