--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Highscores</title>
+	<title>High Scores</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     <script src="assets/js/particles.js"></script>
@@ -14,7 +14,7 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
-			
+			<h1 class="heading-style">High Scores</h1>
 		</div>
 	</div>
 
