Moved script tags to bottom of main body

--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Let's Play</title>
 	<link rel="stylesheet" href="assets/css/style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-    <script src="assets/js/particles.js"></script>
+	
+    
 </head>
 
 <body>
@@ -21,6 +21,9 @@
 	</div>
 
 	<canvas class="background"></canvas>
+    <script src="assets/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="assets/js/particles.js"></script>
 </body>
 
 </html>
