Added event listeners to true and false buttons

--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<p class="question-style" id="statement">What's the answer?</p>
-			<a class="btn" id="trueButton">True</a>
-			<a class="btn" id="falseButton">False</a>
+			<a class="btn" id="trueButton">T</a>
+			<a class="btn" id="falseButton">F</a>
 		</div>
 	</div>
 
