--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
+            <h1 id="score">Score:0</h1>
 			<p class="question-style" id="statement">What's the answer?</p>
 			<a class="btn" id="trueButton">T</a>
 			<a class="btn" id="falseButton">F</a>
