some styling to form and input field

--- a/gameOver.html
+++ b/gameOver.html
@@ -31,7 +31,7 @@
           </button>
         </form>
         <a class="btn" href="">High Scores</a>
-        <a class="btn" href="">Play Again</a>
+        <a class="btn" href="/index.html">Play Again</a>
       </div>
     </div>
 
