moved and added script tags in gameOver

--- a/gameOver.html
+++ b/gameOver.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Game Over</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-    <script src="assets/js/particles.js"></script>
   </head>
 
   <body>
@@ -36,5 +34,8 @@
     </div>
 
     <canvas class="background"></canvas>
+    <script src="assets/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="assets/js/particles.js"></script>
   </body>
 </html>
