--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<div class="flex-center flex-column box-style">
             <h1 id="score">Score:0</h1>
 			<p class="question-style" id="statement">What's the answer?</p>
-			<a class="btn" id="trueButton">T</a>
-			<a class="btn" id="falseButton">F</a>
+			<a class="btn" id="trueButton">True</a>
+			<a class="btn" id="falseButton">False</a>
 		</div>
 	</div>
 
