created a gameOver js file

--- a/gameOver.html
+++ b/gameOver.html
@@ -34,7 +34,7 @@
     </div>
 
     <canvas class="background"></canvas>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/gameOver.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     <script src="assets/js/particles.js"></script>
   </body>
