--- a/gameOver.html
+++ b/gameOver.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="flex-center flex-column box-style">
-        <h1 id="score" class="heading-style">Score: 0</h1>
+        <h1 id="youScored" class="heading-style">You scored: 0</h1>
         <form>
           <input
             type="text"
