added a highscores js file

--- a/highscores.html
+++ b/highscores.html
@@ -13,11 +13,12 @@
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">High Scores</h1>
+            <ul id="highScoresList"></ul>
 		</div>
 	</div>
 
 	<canvas class="background"></canvas>
-    <script src="assets/js/particles.js"></script>
+    <script src="assets/js/highScores.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     <script src="assets/js/particles.js"></script>
 </body>
