--- a/highscores.html
+++ b/highscores.html
@@ -14,6 +14,7 @@
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">High Scores</h1>
             <ul id="highScoresList"></ul>
+            <a href="/index.html">Back</a>
 		</div>
 	</div>
 
