--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">True or False</h1>
 			<a class="btn" href="/main.html">Play</a>
-			<a class="btn">High Scores</a>
+			<a class="btn" href="/highscores.html">High Scores</a>
 		</div>
 	</div>
 
