added some styling to high scores list

--- a/highscores.html
+++ b/highscores.html
@@ -13,8 +13,8 @@
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">High Scores</h1>
-            <ul id="highScoresList"></ul>
-            <a href="/index.html">Back</a>
+            <ol class="high-scores-list" id="highScoresList"></ol>
+            <a class="btn" href="/index.html">Back</a>
 		</div>
 	</div>
 
