added reference to user form input and removed console log

--- a/gameOver.html
+++ b/gameOver.html
@@ -16,8 +16,8 @@
           <input
             type="text"
             name="username"
-            id="username"
-            placeholder="username"
+            id="playerName"
+            placeholder="type here"
           />
           <button
             type="submit"
@@ -28,7 +28,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="">High Scores</a>
+        <a class="btn" href="/highscores.html">High Scores</a>
         <a class="btn" href="/index.html">Play Again</a>
       </div>
     </div>
