added event listener to disable save button if unpit field has no text

--- a/gameOver.html
+++ b/gameOver.html
@@ -15,7 +15,7 @@
         <form>
           <input
             type="text"
-            name="username"
+            name="playername"
             id="playerName"
             placeholder="type here"
           />
@@ -24,6 +24,7 @@
             class="btn"
             id="saveScoreBtn"
             onclick="saveHighScore(event)"
+            disabled
           >
             Save
           </button>
