--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
 
 <body>
 	<div class="container">
-		<div class="flex-center flex-column box-style">
+        <div id="loadAnimation"></div>
+		<div class="flex-center flex-column box-style" id="main-hub">
             <h1 id="score">Score:0</h1>
 			<p class="question-style" id="statement">What's the answer?</p>
 			<a class="btn" id="trueButton">True</a>
