--- a/main.html
+++ b/main.html
@@ -7,8 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Let's Play</title>
 	<link rel="stylesheet" href="assets/css/style.css">
-	
-    
+    <link rel="stylesheet" href="@sweetalert2/theme-minimal/minimal.css">
 </head>
 
 <body>
@@ -26,6 +25,8 @@
     <script src="assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
     <script src="assets/js/particles.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="sweetalert2/dist/sweetalert2.min.js"></script>
 </body>
 
 </html>
