--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<div class="container">
         <div id="loadingText">Loading...</div>
 		<div id="mainHub" class="flex-center flex-column box-style hidden">
-            <h1 id="score">Score:0</h1>
+            <h1 id="score">Score: 0 out of 20</h1>
 			<p class="question-style" id="statement">What's the answer?</p>
 			<a class="btn" id="trueButton">True</a>
 			<a class="btn" id="falseButton">False</a>
