Moved script tags to bottom of index.html

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>True or False</title>
 	<link rel="stylesheet" href="assets/css/style.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-    <script src="assets/js/particles.js"></script>
 </head>
 
 <body>
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">True or False</h1>
-			<a class="btn" href="/main.html">Play</a>
-			<a class="btn" href="/highscores.html">High Scores</a>
+			<a class="btn" href="https://alexpullen91.github.io/True-or-False/main.html">Play</a>
+			<a class="btn" href="https://alexpullen91.github.io/True-or-False/highscores.html">High Scores</a>
 		</div>
 	</div>
 
 	<canvas class="background"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <script src="assets/js/particles.js"></script>
 </body>
 
 </html>
