--- a/gameOver.html
+++ b/gameOver.html
@@ -29,8 +29,8 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/highscores.html">High Scores</a>
-        <a class="btn" href="/index.html">Play Again</a>
+        <a class="btn" href="/True-or-False/highscores.html">High Scores</a>
+        <a class="btn" href="/True-or-False/index.html">Play Again</a>
       </div>
     </div>
 
