--- a/highscores.html
+++ b/highscores.html
@@ -14,7 +14,7 @@
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">High Scores</h1>
             <ol class="high-scores-list" id="highScoresList"></ol>
-            <a class="btn" href="/index.html">Back</a>
+            <a class="btn" href="/True-or-False/index.html">Back</a>
 		</div>
 	</div>
 
