particles moved out of dedicated file into main js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<canvas class="background"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-    <script src="assets/js/particles.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
