--- a/highscores.html
+++ b/highscores.html
@@ -19,9 +19,9 @@
 	</div>
 
 	<canvas class="background"></canvas>
+    <script src="assets/js/main.js"></script>
 	<script src="assets/js/highScores.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-	<script src="assets/js/particles.js"></script>
 </body>
 
 </html>
