swapped in query selector for dom manipulation

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">True or False</h1>
-			<a class="btn" href="/True-or-False/main.html">Play</a>
-			<a class="btn" href="/True-or-False/highscores.html">High Scores</a>
+			<!-- <a class="btn" href="/True-or-False/main.html">Play</a> -->
+            <a class="btn" href="/main.html">Play</a>
+            <!-- <a class="btn" href="/True-or-False/highscores.html">High Scores</a> -->
+			<a class="btn" href="/highscores.html">High Scores</a>
 		</div>
 	</div>
 
