streamlined fetch function

--- a/gameover.html
+++ b/gameover.html
@@ -30,8 +30,10 @@
             Save
           </button>
 			</form>
-			<a class="btn" href="/True-or-False/highscores.html">High Scores</a>
-			<a class="btn" href="/True-or-False/index.html">Play Again</a>
+			<!-- <a class="btn" href="/True-or-False/highscores.html">High Scores</a> -->
+            <a class="btn" href="/highscores.html">High Scores</a>
+			<!-- <a class="btn" href="/True-or-False/index.html">Play Again</a> -->
+            <a class="btn" href="/index.html">Play Again</a>
 		</div>
 	</div>
 
