added comments to high scores js

--- a/highscores.html
+++ b/highscores.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="flex-center flex-column box-style">
 			<h1 class="heading-style">High Scores</h1>
-			<ol class="high-scores-list" id="highScoresList"></ol>
+			<ol class="high-scores-results" id="highScoresResults"></ol>
 			<!-- <a class="btn" href="/True-or-False/index.html">Back</a> -->
             <a class="btn" href="/index.html">Back</a>
             
