save score button and input fields now become disabled after user input

--- a/gameover.html
+++ b/gameover.html
@@ -18,7 +18,7 @@
             type="text"
             name="playername"
             id="playerName"
-            placeholder="type here"
+            placeholder="type name here"
           />
 				<button
             type="submit"
@@ -27,7 +27,7 @@
             onclick="saveHighScore(event)"
             disabled
           >
-            Save
+            Save Score
           </button>
 			</form>
 			<!-- <a class="btn" href="/True-or-False/highscores.html">High Scores</a> -->
