fixed save button

--- a/gameover.html
+++ b/gameover.html
@@ -22,7 +22,7 @@
           <button
             type="submit"
             class="btn"
-            id="saveScoreBtn"
+            id="saveScoreButton"
             onclick="saveHighScore(event)"
             disabled
           >
