removed commented code and restored working links

--- a/highscores.html
+++ b/highscores.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>High Scores</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>High Scores</title>
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
+  <body>
+    <div class="container">
+      <div class="flex-center flex-column box-style">
+        <h1 class="heading-style">High Scores</h1>
+        <ol class="high-scores-results" id="highScoresResults"></ol>
+        <a class="btn" href="/True-or-False/index.html">Back</a>
+      </div>
+    </div>
 
-<body>
-	<div class="container">
-		<div class="flex-center flex-column box-style">
-			<h1 class="heading-style">High Scores</h1>
-			<ol class="high-scores-results" id="highScoresResults"></ol>
-			<!-- <a class="btn" href="/True-or-False/index.html">Back</a> -->
-            <a class="btn" href="/index.html">Back</a>
-            
-		</div>
-	</div>
-
-	<canvas class="background"></canvas>
+    <canvas class="background"></canvas>
     <script src="assets/js/main.js"></script>
-	<script src="assets/js/highScores.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-</body>
-
+    <script src="assets/js/highScores.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+  </body>
 </html>
