--- a/index.html
+++ b/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>True or False</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>True or False</title>
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
+  <body>
+    <div class="container">
+      <div class="flex-center flex-column box-style">
+        <h1 class="heading-style">True or False</h1>
+        <a class="btn" href="/True-or-False/main.html">Play</a>
+        <a class="btn" href="/True-or-False/highscores.html">High Scores</a>
+      </div>
+    </div>
 
-<body>
-	<div class="container">
-		<div class="flex-center flex-column box-style">
-			<h1 class="heading-style">True or False</h1>
-			<!-- <a class="btn" href="/True-or-False/main.html">Play</a> -->
-            <a class="btn" href="/main.html">Play</a>
-            <!-- <a class="btn" href="/True-or-False/highscores.html">High Scores</a> -->
-			<a class="btn" href="/highscores.html">High Scores</a>
-		</div>
-	</div>
-
-	<canvas class="background"></canvas>
+    <canvas class="background"></canvas>
     <script src="assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
-</body>
-
+  </body>
 </html>
